--- a/index3.html
+++ b/index3.html
@@ -8,14 +8,14 @@
 			}
 			#mainarea{
 				width:1200px;
-				height:2800px;
+				height:2600px;
 				background:pink;
 				margin:0 auto;
 			}
 			#menuarea{
 				width:1200px;
 				height:50px;
-				background:rgb(144,12,52);
+				background:green;
 			}
 			#slidearea{
 				width:1200px;
@@ -23,44 +23,43 @@
 				background:white url('bg.jpg') fixed no-repeat;
 			}
 			#s1{
-				width:600px;
-				height:500px;
-				background:transparent;
-				float:right;
-			}
-			#s11{
 				width:400px;
 				height:200px;
-				background:rgb(250,250,210,50%);
+				background:rgb(250,250,250,60%);
 				float:left;
-				margin-top:280px;
-				margin-left:20px;
-				margin-bottom:20px;
+				margin-top:230px;
+				margin-left:400px;
+				margin-bottom:70px;
 				text-align:center;
 				font-family:arial;
 				border-radius:20px;
 			}
-			#s11 h1{
-				margin:0;
-				color:rgb(255,255,255);
-				text-shadow:1px 10px 13px rgba(0,0,0,0.6);;
+			#s1 p{
+				color:#000080;
+				font-size:20px;
 			}
-			#s11 a:link,#s11 a:visited{
-				color:#fafad2;
-				background:rgb(144,12,52);
+			#s1 h1{
+				margin:0;
+				font-size:40px;
+				color:rgb(255,255,255);
+				text-shadow:1px 10px 6px rgba(0, 0, 128,0.6);;
+			}
+			#s1 a:link,#s1 a:visited{
+				color:white;
+				background:green;
 				text-decoration:none;
 				padding:6px 10px;
 				border-radius:20px;
 			}
-			#s11 a:hover{
-				color:rgb(144,12,52);
-				background:#fafad2;
+			#s1 a:hover{
+				color:lightgreen;
+				background:green;
 				text-decoration:;
 			}
 			#listarea{
 				width:900px;
 				height:260px;
-				background:#fafad2;
+				background:#fff;
 				padding: 70px 150px;
 			}
 			.list{
@@ -78,7 +77,7 @@
 			}
 			.l1 h4{
 				margin:0;
-				color:rgb(144,12,52);
+				color:#000080;
 				font-family:arial;
 			}
 			.l1 h4:hover{
@@ -87,12 +86,12 @@
 			#carea{
 				width:1200px;
 				height:700px;
-				background:yellow;
+				background:white;
 			}
 			#clogoarea{
 				width:1200px;
 				height:30px;
-				background:lightgreen;
+				background:white;
 			}
 			#clogo{
 				width:60px;
@@ -105,14 +104,14 @@
 			#chead{
 				width:1200px;
 				height:50px;
-				background:blue;
+				background:white;
 				font-family:arial;
 				padding-top:40px;
 			}
 			#chead h2{
 				margin:0;
 				text-align:center;
-				color:onyx;
+				color:darkgreen;
 			}
 			#cbody{
 				width:1080px;
@@ -123,27 +122,28 @@
 			#cbody1{
 				width:538px;
 				height:500px;
-				background:pink;
+				background:#fff;
 				float:left;
 				border-right:solid 2px #000;
 			}
 			.cb1{
 				width:450px;
 				height:480px;
-				background:skyblue;
+				background:#fff;
 				margin:10px 44px;
 			}
 			.cc1{
 				width:450px;
 				height:100px;
-				background:cyan;
+				background:#fff;
 				text-align:center;
+				padding-bottom:10px;
 			}
 			.cc1 h1{
 				margin:0;
-				font-size:30px;
+				font-size:px;
 				font-family:arial;
-				color:#ff9933;
+				color:orange;
 				letter-spacing:1px;
 			}
 			.cc1 p{
@@ -155,14 +155,14 @@
 			.cc2{
 				width:450px;
 				height:230px;
-				background:orange;
+				background:green;
 				border-radius:10px;
 			}
 			.cc22{
-				width:430px;
-				height:210px;
-				background:purple;
-				margin:10px;
+				width:440px;
+				height:220px;
+				background:#fff;
+				margin:5px;
 				float:left;
 			}
 			.cc3{
@@ -173,37 +173,43 @@
 			.cc33{
 				width:150px;
 				height:150px;
-				background:blue;	
+				background:#fff;	
 				float:left;			
 			}
 			#c1{
-				width:120px;
-				height:120px;
-				background:black url('https://knowindia.india.gov.in/assets/images/img-micro-presidents-address-id.png') no-repeat scroll;
+				width:100px;
+				height:100px;
+				background: url('https://knowindia.india.gov.in/assets/images/img-micro-presidents-address-id.png') no-repeat scroll;
+				background-size:cover;
 				border-radius:50%;
 				margin-top:10px;
 				margin-left:15px;
 				margin-right:15px;
+				border:groove 1px orange;
 			
 			}
 			#c2{
-				width:120px;
-				height:120px;
-				background:black url('https://knowindia.india.gov.in/assets/images/pm.png') no-repeat scroll;
+				width:100px;
+				height:100px;
+				background: url('https://knowindia.india.gov.in/assets/images/pm.png') no-repeat scroll;
+				background-size:cover;
 				border-radius:50%;
 				margin-top:10px;
 				margin-left:15px;
 				margin-right:15px;
+				border:groove 1px orange;
 			
 			}
 			#c3{
-				width:120px;
-				height:120px;
-				background:black url('https://knowindia.india.gov.in/assets/images/img-micro-photo-gallery.png') no-repeat scroll;
+				width:100px;
+				height:100px;
+				background: url('https://knowindia.india.gov.in/assets/images/img-micro-photo-gallery.png') no-repeat scroll;
+				background-size:cover;
 				border-radius:50%;
 				margin-top:10px;
 				margin-left:15px;
 				margin-right:15px;
+				border:groove 1px orange;
 			
 			}
 			.cc332{
@@ -218,49 +224,55 @@
 			#cbody2{
 				width:540px;
 				height:500px;
-				background:violet;
+				background:white;
 				float:left;
 			}
 			.cb2{
 				width:450px;
 				height:480px;
-				background:skyblue;
+				background:#fff;
 				margin:10px 45px;
 			}
 			#c4{
-				width:120px;
-				height:120px;
-				background:black url('https://knowindia.india.gov.in/assets/images/img-micro-awards-winners.png') no-repeat scroll;
+				width:100px;
+				height:100px;
+				background: url('https://knowindia.india.gov.in/assets/images/img-micro-awards-winners.png') no-repeat scroll;
+				background-size:cover;
 				border-radius:50%;
 				margin-top:10px;
 				margin-left:15px;
 				margin-right:15px;
+				border:groove 1px orange;
 			
 			}
 			#c5{
-				width:120px;
-				height:120px;
-				background:black url('https://knowindia.india.gov.in/assets/images/img-micro-republic-of-india.png') no-repeat scroll;
+				width:100px;
+				height:100px;
+				background: url('https://knowindia.india.gov.in/assets/images/img-micro-republic-of-india.png') no-repeat scroll;
+				background-size:cover;
 				border-radius:50%;
 				margin-top:10px;
 				margin-left:15px;
 				margin-right:15px;
+				border:groove 1px orange;
 			
 			}
 			#c6{
-				width:120px;
-				height:120px;
-				background:black url('https://knowindia.india.gov.in/assets/images/img-micro-celebrations.png') no-repeat scroll;
+				width:100px;
+				height:100px;
+				background: url('https://knowindia.india.gov.in/assets/images/img-micro-celebrations.png') no-repeat scroll;
+				background-size:cover;
 				border-radius:50%;
 				margin-top:10px;
 				margin-left:15px;
 				margin-right:15px;
+				border:groove 1px orange;	
 			
 			}
 			#imgarea{
 				width:1200px;
 				height:480px;
-				background:red;
+				background:#fff;
 			}
 			#clogoarea{
 				width:1200px;
@@ -278,20 +290,23 @@
 			#imghead{
 				width:1200px;
 				height:50px;
-				background:blue;
+				background:#fff;
 				font-family:arial;
-				padding-top:40px;
+				padding-top:50px;
 				padding-bottom:0px;
 			}
-			#imghead h2{
-				margin-top:0;
+			#imghead h1{
+				margin:0;
+				font-size:px;
+				font-family:arial;
+				color:darkgreen;
+				letter-spacing:1px;
 				text-align:center;
-				color:onyx;
 			}
 			.imgdata{
 				width:250px;
 				height:300px;
-				background:white;
+				background:orange;
 				float:left;
 				margin:50px 25px ;
 				border-radius:10px;
@@ -311,8 +326,8 @@
 			}
 			.imgdata2 a:link,.imgdata2 a:visited{
 				text-decoration:none;
-				color:#fafad2;
-				background:rgb(144,12,52);
+				color:#FF8C00;
+				background:white;
 				border-radius:20px;
 				padding:5px 15px;
 			
@@ -320,7 +335,7 @@
 			.imgdata2 a:hover{
 				text-decoration:none;
 				text-align:center;
-				color:rgb(144,12,52);
+				color:#FF8C00;
 				background:#fafad2;
 				border-radius:20px;
 				padding:5px 15px;
@@ -335,12 +350,12 @@
 			#boxarea1{
 				width:1200px;
 				height:550px;
-				background:rgb(0,0,0,50%);
+				background:rgb(0,0,0,30%);
 			}
 			.boxhead{
 				width:1200px;
 				height:50px;
-				background:blue;
+				background:#fff;
 				font-family:arial;
 				padding-top:40px;
 			}
@@ -390,7 +405,7 @@
 			}
 			#footerarea{
 				width:1200px;
-				height:400px;
+				height:200px;
 				background:#fafad2;
 			}
 			
@@ -542,7 +557,7 @@
 						</div>
 					</div>
 					<div id="imghead">
-						<h2>Indian Culture</h2>
+						<h1>Indian Culture</h1>
 					</div>
 					<div class="imgdata">
 						<div class="imgdata1">
