--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Photo Gallery</title>
+		<title>Profile</title>
 		<style type="text/css">
 			body{
 				background:#fafad2 url('') no-repeat fixed;
@@ -13,7 +13,7 @@
 				background-size:cover;
 				position:fixed;
 				top:0;
-				left:180px;
+				left:0px;
 				z-index:2000;
 				box-shadow: 1px -1px 5px 5px rgba(128,128,128,0.75);
 			}
@@ -58,62 +58,26 @@
 			}
 			#slidearea{
 				width:1200px;
-				height:400px;
-				background:white url('a1.jpeg') fixed no-repeat;
-				animation:slide 20s infinite;
+				height:340px;
+				background:white url('bg.jpg') fixed no-repeat;
 			}
-			@keyframes slide{
-				0%{
-					background:url('a1.jpeg');
-					background-size:1200px 400px;
-				}
-				25%{
-					background:url('food/f16.jpeg');
-					background-size:1200px 400px;
-				}
-				50%{
-					background:url('monuments/t1.jpg');
-					background-size:1200px 400px;
-				}
-				75%{
-					background:url('farmers/f8.jpeg');
-					background-size:1200px 400px;
-				}
-				100%{
-					background:url('d5.jpg');
-					background-size:1200px 400px;
-				}
-				
-			}
-			#head{
+			#darea{
 				width:1200px;
-				height:50px;
-				background:white;
+				height:500px;
+				background:white url('backgrounds/.jpeg') repeat;
+
+			}
+			#darea h1{
+				margin:0;
 				text-align:center;
+				color:maroon;
+				padding:20px 0px;
 			}
-			#head h1{
-				margin-top:0;
-				padding-top:20px;
-			}
-			#category1{
-				width:1200px;
-				height:300px;
-				background:white;
-			}
-			.c11{
-				width:240px;
-				height:190px;
-				background:white;
-				float:left;
-				margin:50px 25px;
-				border-radius:10px;
-				border:solid 5px lightgrey;
-				box-shadow: 7px 7px 5px -5px rgba(0,0,0,0.75);
-			}
-			#category2{
-				width:1200px;
-				height:300px;
-				background:#fafad2;
+			#darea p{
+				text-align:justify;
+				color:maroon;
+				padding:0 40px;
+				text-indent:20px;
 			}
 			#footerarea{
 				width:1200px;
@@ -142,7 +106,8 @@
 				text-align:justify;
 				color:#fff;
 				padding:0px 20px;
-			}			
+			}
+
 		</style>
 	</head>
 	<body>
@@ -164,52 +129,15 @@
 			</div>
 			<div id="slidearea">
 			</div>
-			<div id="head">
-					<h1>PHOTO GALLERY</h1>
-			</div>
-			<div id="category1">
-				<div class="c11">
-					<a href="" target="#">
-						<img src="food/f14.jpg" width="240px" height="190px" align="center"/>
-					</a>
-				</div>
-				<div class="c11">
-					<a href="" target="#">
-						<img src="dance/d5.jpg" width="240px" height="190px" align="center"/>
-					</a>
-				</div>
-				<div class="c11">
-					<a href="" target="#">
-						<img src="monuments/m1.jpeg" width="240px" height="190px" align="center"/>
-					</a>
-				</div>
-				<div class="c11">
-					<a href="" target="#">
-						<img src="people/p26.jpeg" width="240px" height="190px" align="center"/>
-					</a>
-				</div>
-			</div>
-			<div id="category2">
-				<div class="c11">
-					<a href="" target="#">
-						<img src="farmers/f8.jpeg" width="240px" height="190px" align="center"/>
-					</a>
-				</div>
-				<div class="c11">
-					<a href="" target="#">
-						<img src="food/f14.jpg" width="240px" height="190px" align="center"/>
-					</a>
-				</div>
-				<div class="c11">
-					<a href="" target="#">
-						<img src="army/a5.jpg" width="240px" height="190px" align="center"/>
-					</a>
-				</div>
-				<div class="c11">
-					<a href="" target="#">
-						<img src="sweets/s1.jpg" width="240px" height="190px" align="center"/>
-					</a>
-				</div>
+			<div id="darea">
+				<h1>Profile</h1>
+				<p>
+					India is one of the oldest civilizations in the world with a kaleidoscopic variety and rich cultural heritage. It has achieved all-round socio-economic progress since Independence. As the 7th largest country in the world, India stands apart from the rest of Asia, marked off as it is by mountains and the sea, which give the country a distinct geographical entity. Bounded by the Great Himalayas in the north, it stretches southwards and at the Tropic of Cancer, tapers off into the Indian Ocean between the Bay of Bengal on the east and the Arabian Sea on the west.
+				</p>
+
+				<p>
+					Lying entirely in the northern hemisphere, the mainland extends between latitudes 8° 4' and 37° 6' north, longitudes 68° 7' and 97° 25' east and measures about 3,214 km from north to south between the extreme latitudes and about 2,933 km from east to west between the extreme longitudes. It has a land frontier of about 15,200 km. The total length of the coastline of the mainland, Lakshadweep Islands and Andaman & Nicobar Islands is 7,516.6 km.		
+				</p>
 			</div>
 			<div id="footerarea">
 				<div id="f1">
