--- a/myindia.html
+++ b/myindia.html
@@ -13,7 +13,7 @@
 				background-size:cover;
 				position:fixed;
 				top:0;
-				left:18x0px;
+				left:180px;
 				z-index:2000;
 				box-shadow: 1px -1px 5px 5px rgba(128,128,128,0.75);
 			}
