--- a/data.html
+++ b/data.html
@@ -13,7 +13,7 @@
 				background-size:cover;
 				position:fixed;
 				top:0;
-				left:180px;
+				left:250px;
 				z-index:2000;
 				box-shadow: 1px -1px 5px 5px rgba(128,128,128,0.75);
 			}
@@ -60,7 +60,7 @@
 			#slidearea{
 				width:1200px;
 				height:340px;
-				background:white url('food/f17.jpg') fixed no-repeat;
+				background:white url('food/f18.jpg') fixed no-repeat;
 				background-size:cover;
 			}
 			#darea1{
@@ -76,13 +76,15 @@
 			}
 			.area1 h1{
 				text-align:center;
-				color:rgb(144,12,52);
+				color:rgb(212, 39, 85);
+				font-family:cursive;
 			}
 			.area1 p{
 				text-align:justify;
+				letter-spacing:1px;
 				text-indent:50px;
 				padding:20px;
-				color:rgb(144,12,52);				
+				color:rgb(212, 39, 85);				
 			}
 			.area2{
 				width:600px;
@@ -106,12 +108,12 @@
 			.cat11{
 				width:1200px;
 				height:450px;
-				background:rgb(144,12,52,50%);
+				background:rgb(212, 39, 85,50%);
 			}
 			.cathead{
 				width:1200px;
 				height:50px;
-				background:rgb(144,12,52);
+				background:rgb(212, 39, 85);
 			}
 			.catdata{
 				width:250px;
@@ -137,7 +139,7 @@
 			.catdata2 a:link,.catdata2 a:visited{
 				text-decoration:none;
 				color:#fafad2;
-				background:rgb(144,12,52);
+				background:rgb(212, 39, 85);
 				border-radius:20px;
 				padding:5px 15px;
 			
@@ -145,7 +147,7 @@
 			.catdata2 a:hover{
 				text-decoration:none;
 				text-align:center;
-				color:rgb(144,12,52);
+				color:rgb(212, 39, 85);
 				background:#fafad2;
 				border-radius:20px;
 				padding:5px 15px;
@@ -195,7 +197,7 @@
 			#mapdata{
 				width:250px;
 				height:300px;
-				background:rgb(144,12,52);
+				background:rgb(212, 39, 85);
 				float:left;
 				margin:50px 25px ;
 			}
@@ -222,7 +224,7 @@
 			#mapdata2 a:link,#mapdata a:visited{
 				text-decoration:none;
 				color:rgb(250,250,210);
-				background:rgb(144,52,12);
+				background:rgb(212, 39, 85);
 				padding:5px 10px;
 				border-radius:20px;
 			}
@@ -249,6 +251,7 @@
 			#f1 h1{
 				text-align:center;
 				color:#fff;
+				font-family:cursive;
 			}
 			#f1 hr{
 				width:300px;
@@ -269,7 +272,7 @@
 			<div id="toparea">
 				<div id="menuarea">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="../index.html">Home</a></li>
 						<li><a href="gen_info.html">General Information</a></li>
 						<li><a href="identity_elements.html">National Identity Elements</a></li>
 						<li><a href="states.html">States and Capitals</a></li>
@@ -284,7 +287,7 @@
 			</div>
 			<div id="darea1">
 				<div class="area1">
-					<h1 id="cuisine" align="">INDIAN CUISINE</h1>
+					<h1 id="cuisine" align="">Indian Cuisine</h1>
 					<p>
 						Indian cuisine consists of a variety of regional and traditional cuisines native to India. Given the diversity in soil, climate, culture, ethnic groups, and occupations, these cuisines vary substantially and use locally available <i>spices, herbs, vegetables,</i> and <i>fruits</i>. Indian food is also heavily influenced by religion, in particular Hinduism and Islam, cultural choices and traditions.Staple foods of Indian cuisine include <i>pearl millet </i> (bājra), <i>rice</i>, <i>whole-wheat flour</i> (aṭṭa), and a <i>variety of lentils</i>, such as masoor (most often red lentils), tuer (pigeon peas), urad (black gram), and moong (mung beans). Lentils may be used whole, dehusked—for example, dhuli moong or dhuli urad—or split. Split lentils, or dal, are used extensively.Some pulses, such as <i>channa</i> or <i>cholae</i> (chickpeas), <i>rajma</i> (kidney beans), and <i>lobiya</i> (black-eyed peas) are very common, especially in the northern regions. <i>Channa</i> and <i>moong</i> are also processed into <i>flour</i> (besan).Many Indian dishes are cooked in <i>vegetable oil</i>, but <i>peanut oil</i> is popular in <i>northern</i> and <i>western India</i>, <i>mustard oil</i> in <i>eastern India</i>, and <i>coconut oil</i> along the western coast, especially in <i>Kerala</i> and parts of <i>southern Tamil Nadu</i>.<i>Gingelly</i> (sesame) <i>oil</i> is common in the <i>south</i> since it imparts a fragrant, <i>nutty aroma</i>.In recent decades, <i>sunflower, safflower, cottonseed,</i> and <i>soybean oils</i> have become popular across India.Hydrogenated vegetable oil, known as <i>Vanaspati ghee</i>, is another popular cooking medium.Butter-based ghee, or <i>deshi ghee</i>, is used commonly.
 					</p>
@@ -361,7 +364,7 @@
 				</div>
 				<div class="area1">
 					<h1 id="dance" align="">
-							<font color="">INDIAN DANCE</font>
+							<font color="">Indian Dance</font>
 					</h1>
 						<p>
 							<font color="">
@@ -430,7 +433,7 @@
 			</div>
 			<div id="darea3">
 				<div class="area1">
-					<h1  id="monuments" align="center">INDIAN MONUMENTS</h1>
+					<h1  id="monuments" align="center">Indian Monuments</h1>
 					<p>
 						Much of Indian architecture, including the Taj Mahal, other works of Indo-Islamic Mughal architecture, and South Indian architecture, blends ancient local traditions with imported styles.Vernacular architecture is also regional in its flavours. Vastu shastra, literally "science of construction" or "architecture" and ascribed to Mamuni Mayan,explores how the laws of nature affect human dwellings;it employs precise geometry and directional alignments to reflect perceived cosmic constructs.As applied in Hindu temple architecture, it is influenced by the Shilpa Shastras, a series of foundational texts whose basic mythological form is the Vastu-Purusha mandala, a square that embodied the "absolute".The Taj Mahal, built in Agra between 1631 and 1648 by orders of Mughal emperor Shah Jahan in memory of his wife, has been described in the UNESCO World Heritage List as "the jewel of Muslim art in India and one of the universally admired masterpieces of the world's heritage".Indo-Saracenic Revival architecture, developed by the British in the late 19th century, drew on Indo-Islamic architecture.
 					</p>
