--- a/identity_elements.html
+++ b/identity_elements.html
@@ -13,7 +13,7 @@
 				background-size:cover;
 				position:fixed;
 				top:0;
-				left:180px;
+				left:250px;
 				z-index:2000;
 				box-shadow: 1px -1px 5px 5px rgba(128,128,128,0.75);
 			}
@@ -96,6 +96,7 @@
 			#f1 h1{
 				text-align:center;
 				color:#fff;
+				font-family:cursive;
 			}
 			#f1 hr{
 				width:300px;
@@ -118,7 +119,7 @@
 			<div id="toparea">
 				<div id="menuarea">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="../index.html">Home</a></li>
 						<li><a href="gen_info.html">General Information</a></li>
 						<li><a href="identity_elements.html">National Identity Elements</a></li>
 						<li><a href="states.html">States and Capitals</a></li>
