--- a/index5.html
+++ b/index5.html
@@ -89,14 +89,14 @@
 			}
 			#s1 a:link,#s1 a:visited{
 				color:white;
-				background:green;
+				background:#D42755;
 				text-decoration:none;
 				padding:6px 10px;
 				border-radius:20px;
 			}
 			#s1 a:hover{
-				color:lightgreen;
-				background:green;
+				color:#D42755;
+				background:#fff;
 				text-decoration:;
 			}
 			#listarea{
@@ -167,6 +167,7 @@
 			}
 			#chead h1{
 				margin:0;
+				font-family:cursive;
 				text-align:center;
 				color:darkgreen;
 				text-shadow: 7px 1px 2px rgba(144,238,144,0.6);
@@ -358,7 +359,7 @@
 			#imghead h1{
 				margin:0;
 				font-size:px;
-				font-family:arial;
+				font-family:cursive;
 				color:darkgreen;
 				letter-spacing:1px;
 				text-align:center;
@@ -436,6 +437,7 @@
 			#bhead h1{
 				margin:0;
 				text-align:center;
+				font-family:cursive;
 				color:darkgreen;
 				text-shadow: 7px 1px 2px rgba(144,238,144,0.6);
 			}
@@ -494,6 +496,61 @@
 				height:300px;
 				background:white;
 			}
+			#gallery{
+				width:1150px;
+				height:200px;
+				background:#fff;
+				margin:50px 25px;
+				float:left;
+			}
+			#g1{
+				width:220px;
+				height:150px;
+				background:yellow url('food/f14.jpg');
+				float:left;
+				margin:25px 10px 25px 0px;
+				border-radius:10px;
+				background-size:cover;
+			}
+			.gshadow{
+				box-shadow: 7px 7px 5px -5px rgba(0,0,0,0.75);
+			}
+			#g2{
+				width:220px;
+				height:150px;
+				background:yellow url('dance/d5.jpg');
+				float:left;
+				margin:25px 10px 25px 0px;
+				border-radius:10px;
+				background-size:cover;
+			}
+			#g3{
+				width:220px;
+				height:150px;
+				background:yellow url('monuments/m1.jpeg');
+				float:left;
+				margin:25px 10px 25px 0px;
+				border-radius:10px;
+				background-size:cover;
+			}
+			#g4{
+				width:220px;
+				height:150px;
+				background:yellow url('sweets/s1.jpg');
+				float:left;
+				margin:25px 10px 25px 0px;
+				border-radius:10px;
+				background-size:cover;
+			}
+			#g5{
+				width:220px;
+				height:150px;
+				background:yellow url('people/p26.jpeg');
+				float:left;
+				margin:25px 10px 25px 0px;
+				border-radius:10px;
+				background-size:cover;
+			}
 			#footerarea{
 				width:1200px;
 				height:500px;
@@ -511,6 +568,7 @@
 			#f1 h1{
 				text-align:center;
 				color:#fff;
+				font-family:cursive;
 			}
 			#f1 hr{
 				width:300px;
@@ -911,6 +969,22 @@
 			</div>
 			</div>
 			<div id="galleryarea">
+				<div id="gallery">
+					<marquee direction="right" scrollamount="10" behavior="" onmouseover="this.stop()" onmouseout="this.start()">
+						<a href="gallery.html">
+							<div id="g1" class="gshadow">
+							</div>
+							<div id="g2" class="gshadow">
+							</div>
+							<div id="g3" class="gshadow">
+							</div>
+							<div id="g4" class="gshadow">
+							</div>
+							<div id="g5" class="gshadow">
+							</div>
+						</a>
+					</marquee>
+				</div>
 			</div>
 			<div id="footerarea">
 				<div id="f1">
