--- a/profile.html
+++ b/profile.html
@@ -118,7 +118,7 @@
 			<div id="toparea">
 				<div id="menuarea">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="#">Home</a></li>
 						<li><a href="gen_info.html">General Information</a></li>
 						<li><a href="identity_elements.html">National Identity Elements</a></li>
 						<li><a href="states.html">States and Capitals</a></li>
